# Neural-networks-in-CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: DenseLayer.cpp  DenseLayer.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  STATUS.h
